objects/Activity/fields/Actioned__c.field-meta.xml
<CustomField>
    <fullName>Actioned__c</fullName>
    <label>Actioned</label>
    <type>Date</type>
</CustomField>