objects/Activity/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>