objects/Activity/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>John Boyt</fullName>
            </value>
            <value>
                <fullName>Michael Pitorac</fullName>
            </value>
            <value>
                <fullName>Ray Watts</fullName>
            </value>
            <value>
                <fullName>Tim Boyt</fullName>
            </value>
            <value>
                <fullName>Visits_Pending_Kent</fullName>
                <label>Visits Pending-Kent</label>
            </value>
            <value>
                <fullName>Ralph_Boyt</fullName>
                <label>Ralph Boyt</label>
            </value>
            <value>
                <fullName>Vists_Pending-Inside M25</fullName>
            </value>
            <value>
                <fullName>Chester_M_Boyt</fullName>
                <label>Chester M Boyt</label>
            </value>
            <value>
                <fullName>Chaz Sidhu</fullName>
                <default>true</default>
                <label>Chaz Sidhu</label>
            </value>
            <value>
                <fullName>Sarah Boyt</fullName>
            </value>
            <value>
                <fullName>Lorna Welch</fullName>
            </value>
            <value>
                <fullName>Not Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>