objects/Activity/fields/MyTasks__Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>MyTasks__Account_Billing_State__c</fullName>
    <label>Account Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>