objects/Activity/fields/MyTasks__Lead_Company__c.field-meta.xml
<CustomField>
    <fullName>MyTasks__Lead_Company__c</fullName>
    <label>Lead Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>