objects/Activity/fields/MyTasks__Lead_State__c.field-meta.xml
<CustomField>
    <fullName>MyTasks__Lead_State__c</fullName>
    <label>Lead State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>