objects/Activity/fields/MyTasks__who_email__c.field-meta.xml
<CustomField>
    <fullName>MyTasks__who_email__c</fullName>
    <label>who_email</label>
    <type>Email</type>
</CustomField>