objects/Activity/fields/MyTasks__who_phone__c.field-meta.xml
<CustomField>
    <fullName>MyTasks__who_phone__c</fullName>
    <label>who_phone</label>
    <type>Phone</type>
</CustomField>