objects/Activity/fields/Task_Value__c.field-meta.xml
<CustomField>
    <fullName>Task_Value__c</fullName>
    <label>Task Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>