objects/Activity/listViews/MyActivities.listView-meta.xml
<ListView>
    <fullName>MyActivities</fullName>
    <columns>ACTIVITY_SUBTYPE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>EVENT.LOCATION</columns>
    <columns>TASK.TYPE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.CALLTYPE</columns>
    <columns>Actioned__c</columns>
    <columns>Actions__c</columns>
    <columns>Task_Value__c</columns>
    <columns>Started__c</columns>
    <columns>ACTIVITY.TASK</columns>
    <filterScope>Mine</filterScope>
    <label>My Activities</label>
</ListView>