objects/Activity/listViews/MyDelegatedActivities.listView-meta.xml
<ListView>
    <fullName>MyDelegatedActivities</fullName>
    <columns>TASK.WHO_NAME</columns>
    <columns>ACTIVITY_SUBTYPE</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.CALLTYPE</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>Actioned__c</columns>
    <columns>Actions__c</columns>
    <columns>Origin__c</columns>
    <columns>Started__c</columns>
    <columns>Task_Value__c</columns>
    <columns>ACTIVITY.TASK</columns>
    <filterScope>Delegated</filterScope>
    <label>My Delegated Activities</label>
</ListView>