objects/Activity/listViews/TodaysTasks.listView-meta.xml
<ListView>
    <fullName>TodaysTasks</fullName>
    <columns>Origin__c</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.CALLTYPE</columns>
    <columns>Actioned__c</columns>
    <columns>Actions__c</columns>
    <columns>Started__c</columns>
    <columns>Task_Value__c</columns>
    <columns>ACTIVITY.TASK</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessThan</operation>
        <value>TOMORROW</value>
    </filters>
    <label>Today&apos;s Tasks</label>
</ListView>