objects/Activity/listViews/UpcomingEvents.listView-meta.xml
<ListView>
    <fullName>UpcomingEvents</fullName>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.CALLTYPE</columns>
    <columns>ACTIVITY_SUBTYPE</columns>
    <columns>Actioned__c</columns>
    <columns>Actions__c</columns>
    <columns>Started__c</columns>
    <columns>Origin__c</columns>
    <columns>Task_Value__c</columns>
    <columns>ACTIVITY.TASK</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Upcoming Events</label>
</ListView>